Fix scrolling on mobile by changing the container width and height

--- a/style.css
+++ b/style.css
@@ -9,13 +9,14 @@ body
     justify-content: center;
     background-color: black;
     cursor: url('cursor.png'), auto;
-    height: 95%;
+    width: 99%;
+    height: 99%;
     position: absolute;
 }
 
 .container
 {
-    width: 100vw;
+    width: 100%;
     height: 100%;
 
     background-color:rgb(17, 17, 17);
